--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -143,7 +143,7 @@
 			</td>
 			<td valign="top" width="70%">
 			<p align="left">The task editor's description and comment fields now
-			relow to fill available space when the editor is resized.</p>
+			reflow to fill available space when the editor is resized.</p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.0/comment-flow.png"></td>
 		</tr>
@@ -163,8 +163,8 @@
 			<td valign="top" width="70%">
 			<p align="left">The task editor has become more extensible with
 			introduction of the
-			org.eclipse.mylyn.tasks.ui.taskEditorExtensions and org.eclipse.mylyn.tasks.ui.taskEditorExtensionSettings extension points.
-			This extension point is in currenlty leveraged by the new Wikitext
+			<code>org.eclipse.mylyn.tasks.ui.taskEditorExtensions</code> and <code>org.eclipse.mylyn.tasks.ui.taskEditorExtensionSettings</code> extension points.
+			This extension point is in currently leveraged by the new Wikitext
 			integration (see below).</p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.1/editor-extensibility.png"></td>
@@ -199,9 +199,9 @@
 			<p align="right"><b>Comment folding</b></p>
 			</td>
 			<td valign="top" width="70%">
-			<p align="left">When the number of comments on a task is larger i.e. > 20 comments, the comments section will fold comments by date, 
+			<p align="left">When a task has large number of comments, the comments section will fold comments by date, 
 			grouping them into Recent and Older sections.  This makes working with tasks with a large number of comments much smoother since the editor
-			 is not unnecessarily long due to comments.  Upon opening, new comments are revealed whil old comments are folded.  Pressing the expand all button will expand all comments since your last comment. Press again to unfold older tasks.</p>
+			 is not unnecessarily long due to comments.  Upon opening, new comments are revealed while old comments are folded.  Pressing the expand all button will expand all comments since your last comment. Press again to unfold older tasks.</p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.1/comment-folding.png"></td>
 		</tr>
@@ -236,11 +236,11 @@
 <table cellpadding="10" cellspacing="0" id="table409">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Improved exclusion upon checkout</b></p>
+			<p align="right"><b>Improved exclusion upon checkout and update</b></p>
 			</td>
 			<td valign="top" width="70%">
 			<p align="left">Context exclusion has been improved for scenarios such as CVS checkout where a large number of files are brought into the workspace.
-			Formerlly all files would pollute the currently active task context. This has be greatly improved so that only explicitly created resources are contributed to the active task context.</p>
+			Formerly all files would pollute the currently active task context. This has be greatly improved so that only explicitly created resources are contributed to the active task context.</p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.1/focus-exlude-checkout.png"></td>
 		</tr>
