NEW - bug 263861: prepare New & Noteworthy for 3.1 https://bugs.eclipse.org/bugs/show_bug.cgi?id=263861

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -12,10 +12,10 @@
 <p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 3.1</span> </p>
 <ul>
 	<li><a href="#help">Mylyn Help (1)</a></li>
-	<li><a href="#task-list">Task List (3)</a></li>
-	<li><a href="#task-editor">Task Editor (6)</a></li>
+	<li><a href="#task-list">Task List (4)</a></li>
+	<li><a href="#task-editor">Task Editor (7)</a></li>
 	<li><a href="#focused-ui">Focused UI (1)</a></li>
-	<li><a href="#bugzilla">Bugzilla Connector (4)</a></li>
+	<li><a href="#bugzilla">Bugzilla Connector (5)</a></li>
 	<li><a href="#jira">JIRA Connector (1)</a></li>
 	<li><a href="#wikitext">WikiText (5)</a></li>
 </ul>
@@ -40,6 +40,24 @@
 </table>
 
 <h2><a name="task-list">Task List</a></h2>
+
+<table cellpadding="10" cellspacing="0" id="table414">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>New Task Dropdown</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">The New Task button has a dropdown menu which allows quick selection of the repository you want to create a new task on.
+			The menu also has actions for creating new Categories, Queries, and for adding new Task Repositories.</p>
+			<p class="MsoPlainText">
+			<img border="0" src="images/3.1/tasklist-newmenu.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
 
 <table cellpadding="10" cellspacing="0" id="table414">
 		<tr>
@@ -139,6 +157,40 @@
 <table cellpadding="10" cellspacing="0" id="table413">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Schedule Task Toolbar Button</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">Tasks can be scheduled through the Schedule Task button in the Task List toolbar.</p>
+			<p class="MsoPlainText">
+			<img border="0" src="images/3.0/comment-flow.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table413">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Add Tasks not in Task List</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">When a task is opened that doesn't exists in your Task List (i.e. when opening a search hit in the Search View), a hyperlinked message is displayed in the editor's banner. Click the link to add the task to your Task List.</p>
+			<p class="MsoPlainText">
+			<img border="0" src="images/3.1/add-task.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table413">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
 			<p align="right"><b>Comment text flow</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -212,23 +264,6 @@
 		</tr>
 </table>
 
-<table cellpadding="10" cellspacing="0" id="table415">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Attachments Table Decoration</b></p>
-			</td>
-			<td valign="top" width="70%">
-			<p align="left">New attachments are now highlighted in the attachments table similarly to how attributes are highlighted when new incoming changes arrive. Obsolete/deprecated attachments are grayed out now as well.</p>
-			<p class="MsoPlainText">
-			<img border="0" src="images/3.1/attachments-decorated.png"></td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-</table>
-
 
 <p class="MsoPlainText">&nbsp; </p>
 <h2><a name="focused-ui">Focused UI</a></h2>
@@ -263,6 +298,23 @@
 			</td>
 			<td valign="top" width="70%">
 			<p align="left">Bugzilla 3.2 is supported including the additional custom field types introduced (see below) and new security measures introdued in Bugzilla 3.2.2.</p>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table415">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Support for Deprecating Patches</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">Right click on attachments to mark as deprecated.  Obsolete/deprecated attachments are grayed out and new incoming attachments are highlighted.</p>
+			<p class="MsoPlainText">
+			<img border="0" src="images/3.1/attachments-decorated.png"></td>
 		</tr>
 		<tr>
 			<td colspan="2">
