NEW - bug 263861: prepare New & Noteworthy for 3.1 https://bugs.eclipse.org/bugs/show_bug.cgi?id=263861

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -16,11 +16,11 @@
 	<li><a href="#task-editor">Task Editor (7)</a></li>
 	<li><a href="#focused-ui">Focused UI (1)</a></li>
 	<li><a href="#bugzilla">Bugzilla Connector (5)</a></li>
-	<li><a href="#jira">JIRA Connector (1)</a></li>
+	<li><a href="#jira">JIRA Connector (2)</a></li>
 	<li><a href="#wikitext">WikiText (5)</a></li>
 </ul>
 
-<h2><a name="help">Mylyn Help</a></h2>
+<h2><a name="help">Help and Internationalization</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table414">
 		<tr>
@@ -31,6 +31,23 @@
 			<p align="left">The Mylyn wiki is a great source of information for both new users and those building upon or integrating with Mylyn. A snapshot of the online wiki is now included in Mylyn releases and is accessible from the main Eclipse Help index (Help > Help Contents > Mylyn).</p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.1/mylyn-help.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table414">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Mylyn Internationalization</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">Mylyn has been internationalized and through the <a href="http://babel.eclipse.org/babel/">Eclipse Babel</a> project, users can download launguage packs for their language and help translate Mylyn to other languages.</p>
+			<p class="MsoPlainText">
+			<img border="0" src="images/3.1/mylyn-i18n.png"></td>
 		</tr>
 		<tr>
 			<td colspan="2">
@@ -395,6 +412,40 @@
 			<p align="left">The JIRA worklog is now visible within the JIRA task editor when JIRA 3.12 or later is in use.</p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.1/jira-worklog.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table423">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Issue Type Scoped by Project</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">Both new and existing JIRA task editor's issue type field now only lists types available to the selected project. Update your repository configuration is not seeing this scoping. (Note: requiries JIRA 3.12 or later)</p>
+			<p class="MsoPlainText">
+			<img border="0" src="images/3.1/jira-issue-type.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table423">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Real Names</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">Real names are now displayed for Assigned to and Reporter and if available for comment and attachment authors.</p>
+			<p class="MsoPlainText">
+			<img border="0" src="images/3.1/jira-real-names.png"></td>
 		</tr>
 		<tr>
 			<td colspan="2">
