NEW - bug 263861: prepare New & Noteworthy for 3.1 https://bugs.eclipse.org/bugs/show_bug.cgi?id=263861

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -155,7 +155,7 @@
     <li>TWiki</li>
     <li>Note: New languages can be integrated via a common WikiText parsing framework</li>
     </ul>
-    <p>WikiText is configured on a per Task Repository basis. Choose which language you wish to use from the Editor section of the Task Repository preference page:
+    <p>WikiText is configured on a per Task Repository basis. Choose which language you wish to use from the Editor section of the Task Repository preference page.
     </p>
     <p>
     	Once a laungage has been chosen, open a task from the repository and type in a comment using wiki language constructs.  Press the preview button, to see how your comment will appear to others using the WikiText support.
