--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -1,11 +1,19 @@
 <html>
 <body bgcolor="FFFFFF">
 
-<p><b>New & Noteworthy for Mylyn 3.1 weekly builds</b></p>
+<p><b><i>DRAFT</i> New &amp; Noteworthy for Mylyn 3.1</b></p>
 
 <a href="https://bugs.eclipse.org/bugs/buglist.cgi?short_desc_type=allwordssubstr&short_desc=&product=Mylyn&target_milestone=3.1&long_desc_type=allwordssubstr&long_desc=&keywords_type=allwords&keywords=noteworthy&order=Importance">Query for noteworthy bugs</a>
 
-
+<p><b>Also see the New &amp; Noteworthy for: 
+<a href="http://eclipse.org/mylyn/new/new-3.0.html">Mylyn 3.0</a>, 
+<a href="http://eclipse.org/mylyn/new/new-2.0.html">Mylyn 2.0</a>, 
+<a href="http://eclipse.org/mylyn/new/new-1.0.html">Mylyn 1.0-0.6</a>, <a href="http://eclipse.org/mylyn/new/new-0.5.html">
+Mylyn 0.5</a>,&nbsp;
+<a href="http://eclipse.org/mylyn/new/new-0.4.html">Mylyn 0.4</a>, <a href="http://eclipse.org/mylyn/new/new-0.3.html">
+Mylyn 0.3</a></b></p>
+<p><b>Updating</b>:&nbsp; If using a version prior to 2.0, upgrade to 2.0 
+before installing Mylyn 3.0.</p>
 
 <hr>
 
@@ -16,7 +24,7 @@
 	<li><a href="#task-editor">Task Editor (7)</a></li>
 	<li><a href="#focused-ui">Focused UI (1)</a></li>
 	<li><a href="#bugzilla">Bugzilla Connector (4)</a></li>
-	<li><a href="#jira">JIRA Connector (2)</a></li>
+	<li><a href="#jira">JIRA Connector (3)</a></li>
 	<li><a href="#wikitext">WikiText (5)</a></li>
 </ul>
 
@@ -411,8 +419,6 @@
 			</td>
 			<td valign="top" width="70%">
 			<p align="left">Both new and existing JIRA task editor's issue type field now only lists types available to the selected project. Update your repository configuration is not seeing this scoping. (Note: requiries JIRA 3.12 or later)</p>
-			<p class="MsoPlainText">
-			<img border="0" src="images/3.1/jira-issue-type.png"></td>
 		</tr>
 		<tr>
 			<td colspan="2">
