RESOLVED - bug 263861: prepare New & Noteworthy for 3.1 https://bugs.eclipse.org/bugs/show_bug.cgi?id=263861

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -53,7 +53,7 @@ before installing Mylyn 3.0.</p>
 			<p align="right"><b>Mylyn Internationalization</b></p>
 			</td>
 			<td valign="top" width="70%">
-			<p align="left">Mylyn has been internationalized and through the <a href="http://babel.eclipse.org/babel/">Eclipse Babel</a> project, users can download launguage packs for their language and help translate Mylyn to other languages.</p>
+			<p align="left">Mylyn has been internationalized and through the <a href="http://babel.eclipse.org/babel/">Eclipse Babel</a> project, users help translate Mylyn to other languages.</p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.1/mylyn-i18n.png"></td>
 		</tr>
